@@ -15,9 +15,6 @@
  */
 package com.google.appengine.tools.development;
 
-import com.google.apphosting.testing.PortPicker;
-import static com.google.common.base.StandardSystemProperty.JAVA_HOME;
-import static com.google.common.base.StandardSystemProperty.JAVA_SPECIFICATION_VERSION;
 import static com.google.common.truth.Truth.assertThat;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
@@ -29,11 +26,12 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.UncheckedIOException;
 import java.net.InetSocketAddress;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.concurrent.CountDownLatch;
+import java.util.stream.Stream;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.config.RequestConfig;
@@ -41,79 +39,18 @@ import org.apache.http.client.methods.HttpGet;
 import org.apache.http.impl.client.HttpClientBuilder;
 import org.apache.http.util.EntityUtils;
 import org.junit.After;
-import org.junit.Before;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.Test;
 
-@RunWith(Parameterized.class)
 public abstract class DevAppServerTestBase {
   private int jettyPort;
   private Process runtimeProc;
   private CountDownLatch serverStarted;
 
-  protected static final int NUMBER_OF_RETRIES = 5;
+  private static final int NUMBER_OF_RETRIES = 5;
 
   private static HttpClient httpClient;
-  protected static final int RESPONSE_200 = 200;
-  private static final String TOOLS_JAR =
-      getSdkRoot().getAbsolutePath() + "/lib/appengine-tools-api.jar";
+  private static final int RESPONSE_200 = 200;
 
-  @Parameterized.Parameters
-  public static Collection EEVersion() {
-    return Arrays.asList(new Object[][] {{"EE6"}, {"EE8"}, {"EE10"}});
-  }
-
-  public DevAppServerTestBase(String EEVersion) {
-    if (EEVersion.equals("EE6")) {
-        System.setProperty("appengine.use.jetty12", "false");
-        System.setProperty("appengine.use.EE10", "false");
-    } else if (EEVersion.equals("EE8")) {
-        System.setProperty("appengine.use.jetty12", "true");
-        System.setProperty("appengine.use.EE10", "false");
-    }  else if (EEVersion.equals("EE10")) {
-        System.setProperty("appengine.use.jetty12", "true");
-        System.setProperty("appengine.use.EE10", "true");
-    }
-  }
-  abstract  public File getAppDir() ;
-  
-  @Before
-  public void setUpClass() throws IOException, InterruptedException {
-    PortPicker portPicker = PortPicker.create();
-    jettyPort = portPicker.pickUnusedPort();
-    File appDir = getAppDir();
-
-    ArrayList<String> runtimeArgs = new ArrayList<>();
-    runtimeArgs.add(JAVA_HOME.value() + "/bin/java");
-    runtimeArgs.add("-Dappengine.sdk.root=" + getSdkRoot());
-    if (!JAVA_SPECIFICATION_VERSION.value().equals("1.8")) {
-      // Java11 or later need more flags:
-      runtimeArgs.add("--add-opens");
-      runtimeArgs.add("java.base/java.net=ALL-UNNAMED");
-      runtimeArgs.add("--add-opens");
-      runtimeArgs.add("java.base/sun.net.www.protocol.http=ALL-UNNAMED");
-      runtimeArgs.add("--add-opens");
-      runtimeArgs.add("java.base/sun.net.www.protocol.https=ALL-UNNAMED");
-    } else {
-        // Jetty12 does not support java8.
-        System.setProperty("appengine.use.jetty12", "false");
-        System.setProperty("appengine.use.EE10", "false");
-    }
-    runtimeArgs.add("-Dappengine.use.jetty12=" + System.getProperty("appengine.use.jetty12"));
-    runtimeArgs.add("-Dappengine.use.EE10=" + System.getProperty("appengine.use.EE10"));
-    runtimeArgs.add("-cp");
-    runtimeArgs.add(TOOLS_JAR);
-    runtimeArgs.add("com.google.appengine.tools.development.DevAppServerMain");
-    runtimeArgs.add("--address=" + new InetSocketAddress(jettyPort).getHostString());
-    runtimeArgs.add("--port=" + jettyPort);
-    runtimeArgs.add("--allow_remote_shutdown"); // Keep as used in Maven plugin
-    runtimeArgs.add("--disable_update_check"); // Keep, as used in Maven plugin
-    runtimeArgs.add("--no_java_agent"); // Keep, as used in Maven plugin
-
-    runtimeArgs.add(appDir.toString());
-    createRuntime(ImmutableList.copyOf(runtimeArgs), ImmutableMap.of(), jettyPort);
-  }
-  
   static File createApp(String directoryName) {
     File currentDirectory = new File("").getAbsoluteFile();
     File appRoot =
@@ -151,6 +88,53 @@ public abstract class DevAppServerTestBase {
     runtimeProc.destroy();
   }
 
+  @Test
+  public void useMemcache() throws Exception {
+    // App Engine Memcache access.
+    executeHttpGet(
+        "/?memcache_loops=10&memcache_size=10",
+        "Running memcache for 10 loops with value size 10\n"
+            + "Cache hits: 10\n"
+            + "Cache misses: 0\n",
+        RESPONSE_200);
+
+    executeHttpGet(
+        "/?memcache_loops=10&memcache_size=10",
+        "Running memcache for 10 loops with value size 10\n"
+            + "Cache hits: 20\n"
+            + "Cache misses: 0\n",
+        RESPONSE_200);
+
+    executeHttpGet(
+        "/?memcache_loops=5&memcache_size=10",
+        "Running memcache for 5 loops with value size 10\n"
+            + "Cache hits: 25\n"
+            + "Cache misses: 0\n",
+        RESPONSE_200);
+  }
+
+  @Test
+  public void useUserApi() throws Exception {
+    // App Engine User API access.
+    executeHttpGet("/?user", "Sign in with /_ah/login?continue=%2F\n", RESPONSE_200);
+  }
+
+  @Test
+  public void useDatastoreAndTaskQueue() throws Exception {
+    // First, populate Datastore entities
+    executeHttpGet("/?datastore_entities=3", "Added 3 entities\n", RESPONSE_200);
+
+    // App Engine Taskqueue usage, queuing the addition of 7 entities.
+    executeHttpGet(
+        "/?add_tasks=1&task_url=/?datastore_entities=7",
+        "Adding 1 tasks for URL /?datastore_entities=7\n",
+        RESPONSE_200);
+
+    // After a while, we should have 10 or more entities.
+    executeHttpGetWithRetriesContains(
+        "/?datastore_count", "Found ", RESPONSE_200, NUMBER_OF_RETRIES);
+  }
+
   private Process launchRuntime(
       ImmutableList<String> args, ImmutableMap<String, String> extraEnvironmentEntries)
       throws IOException, InterruptedException {
@@ -166,19 +150,13 @@ public abstract class DevAppServerTestBase {
     return process;
   }
 
-  protected void executeHttpGet(String url, String expectedResponseBody, int expectedReturnCode)
+  private void executeHttpGet(String url, String expectedResponseBody, int expectedReturnCode)
       throws Exception {
     executeHttpGetWithRetries(
         url, expectedResponseBody, expectedReturnCode, /* numberOfRetries= */ 1);
   }
 
-  protected void executeHttpGetContains(String url, String containsResponse, int expectedReturnCode)
-      throws Exception {
-    executeHttpGetWithRetriesContains(
-        url, containsResponse, expectedReturnCode, /* numberOfRetries= */ 1);
-  }
-  
-  protected void executeHttpGetWithRetries(
+  private void executeHttpGetWithRetries(
       String url, String expectedResponse, int expectedReturnCode, int numberOfRetries)
       throws Exception {
     HttpGet get =
@@ -202,7 +180,7 @@ public abstract class DevAppServerTestBase {
     assertThat(retCode).isEqualTo(expectedReturnCode);
   }
 
-  protected void executeHttpGetWithRetriesContains(
+  private void executeHttpGetWithRetriesContains(
       String url, String expectedResponse, int expectedReturnCode, int numberOfRetries)
       throws Exception {
     HttpGet get =
@@ -247,6 +225,33 @@ public abstract class DevAppServerTestBase {
         }
       } catch (IOException e) {
         throw new RuntimeException(e);
+      }
+    }
+  }
+
+  private static void copyTree(Path fromRoot, Path toRoot) throws IOException {
+    try (Stream<Path> stream = Files.walk(fromRoot)) {
+      stream.forEach(
+          fromPath -> {
+            try {
+              copyFile(fromRoot, fromPath, toRoot);
+            } catch (IOException e) {
+              throw new UncheckedIOException(e);
+            }
+          });
+    } catch (UncheckedIOException e) {
+      throw new IOException(e);
+    }
+  }
+
+  private static void copyFile(Path fromRoot, Path fromPath, Path toRoot) throws IOException {
+    if (!Files.isDirectory(fromPath)) {
+      Path relative = fromRoot.relativize(fromPath);
+      if (relative.getParent() != null) {
+        Path toDir = toRoot.resolve(relative.getParent());
+        Files.createDirectories(toDir);
+        Path toPath = toRoot.resolve(relative);
+        Files.copy(fromPath, toPath);
       }
     }
   }
